[TodoApplication] update NewTodoTaskActivity layout

--- a/TodoApplication/app/src/main/res/values/strings.xml
+++ b/TodoApplication/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">TodoApplication</string>
+    <string name="todo_task_layout_dummy_title">Todo Task Title</string>
 </resources>
